<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="12dp"
        android:layout_marginVertical="6dp"
        app:cardElevation="4dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="12dp"
            android:layout_marginTop="6dp">

            <TextView
                android:id="@+id/txt_service_item_name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:maxLines="1"
                android:text="@{service.serviceName}"
                android:textAppearance="@style/TextAppearance.Material3.HeadlineSmall"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="Service-Name" />

            <TextView
                android:id="@+id/txt_label_ip_address"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txt_label_ip_address"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@id/txt_host" />

            <TextView
                android:id="@+id/txt_host"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@{service.host.hostAddress}"
                android:textAlignment="textEnd"
                android:textAppearance="@style/TextAppearance.Material3.BodyLarge"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/txt_label_ip_address"
                app:layout_constraintTop_toBottomOf="@+id/txt_service_item_name"
                tools:text="10.82.100.100" />

            <TextView
                android:id="@+id/txt_label_port"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txt_label_port"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@id/txt_port" />

            <TextView
                android:id="@+id/txt_port"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@{Integer.toString(service.port)}"
                android:textAlignment="textEnd"
                android:textAppearance="@style/TextAppearance.Material3.BodyLarge"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/txt_label_port"
                app:layout_constraintTop_toBottomOf="@id/txt_host"
                tools:text="8080" />

            <TextView
                android:id="@+id/txt_label_service_type"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txt_label_service_type"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@id/txt_service_item_type" />

            <TextView
                android:id="@+id/txt_service_item_type"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@{service.serviceType}"
                android:textAlignment="textEnd"
                android:textAppearance="@style/TextAppearance.Material3.BodyLarge"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/txt_label_service_type"
                app:layout_constraintTop_toBottomOf="@id/txt_port"
                tools:text="._service._tcp." />

            <Button
                style="@style/Widget.MaterialComponents.Button.TextButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:enabled="@{!service.attributes.empty}"
                android:onClick="@{() -> callback.onAttributesClick(service)}"
                android:text="@string/btn_attributes"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/txt_service_item_type" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.card.MaterialCardView>

    <data>

        <import type="android.net.nsd.NsdServiceInfo" />

        <variable
            name="service"
            type="NsdServiceInfo" />

        <variable
            name="callback"
            type="com.jeppsson.dnssd.ui.ServiceClickCallback" />

    </data>

</layout>
